--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="primaryColor">#5d4037</color>
+    <color name="primaryLightColor">#8b6b61</color>
+    <color name="primaryDarkColor">#321911</color>
+    <color name="secondaryColor">#37545d</color>
+    <color name="secondaryLightColor">#63808a</color>
+    <color name="secondaryDarkColor">#0c2b33</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#ffffff</color>
 </resources>
