--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/monsterOverviewFragment"
-        android:name="de.enduni.monsterlair.overview.MonsterOverviewFragment"
+        android:name="de.enduni.monsterlair.monsterlist.MonsterOverviewFragment"
         android:label="MonsterOverviewFragment"
         tools:layout="@layout/fragment_monster_overview" />
 </navigation>
