--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -63,10 +63,14 @@
 
     <fragment
         android:id="@+id/encounterCreatorFragment"
-        android:name="de.enduni.monsterlair.encounters.monsters.EncounterCreatorFragment"
+        android:name="de.enduni.monsterlair.encounters.creator.EncounterCreatorFragment"
         android:label="EncounterCreatorFragment"
         tools:layout="@layout/fragment_encounter_creator">
 
+        <argument
+            android:name="encounter_id"
+            android:defaultValue="-1L"
+            app:argType="long" />
         <argument
             android:name="encounter_level"
             android:defaultValue="1"
@@ -78,7 +82,7 @@
         <argument
             android:name="encounter_difficulty"
             android:defaultValue="TRIVIAL"
-            app:argType="de.enduni.monsterlair.common.EncounterDifficulty" />
+            app:argType="de.enduni.monsterlair.encounters.domain.EncounterDifficulty" />
 
     </fragment>
 
