hazards in encounters

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -82,7 +82,7 @@
         <argument
             android:name="encounter_difficulty"
             android:defaultValue="TRIVIAL"
-            app:argType="de.enduni.monsterlair.encounters.domain.EncounterDifficulty" />
+            app:argType="de.enduni.monsterlair.encounters.domain.model.EncounterDifficulty" />
 
     </fragment>
 
