Support dark mode in icons Small UI improvements

--- a/app/src/main/res/layout/fragment_encounter_creator.xml
+++ b/app/src/main/res/layout/fragment_encounter_creator.xml
@@ -9,7 +9,7 @@
         android:id="@+id/filter_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="?colorSurface"
         android:elevation="4dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
