--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_monsters"
-        android:title="Monsters" />
+        android:icon="@drawable/ic_monster_dragon"
+        android:id="@+id/monster_overview_fragment"
+        android:title="@string/fragment_monsters" />
     <item
-        android:id="@+id/navigation_hazards"
-        android:title="Hazards" />
+        android:icon="@drawable/ic_hazard_simple"
+        android:id="@+id/hazard_fragment"
+        android:title="@string/fragment_hazards" />
     <item
-        android:id="@+id/navigation_encounters"
-        android:title="Encounter Creator" />
+        android:icon="@drawable/ic_crossed_swords"
+        android:id="@+id/encounters_fragment"
+        android:title="@string/fragment_encounters" />
 </menu>
