--- a/app/src/main/res/layout/fragment_encounter_export.xml
+++ b/app/src/main/res/layout/fragment_encounter_export.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/ic_monster_fey"
+        android:src="@drawable/ic_print"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
