--- a/app/src/main/res/layout/viewholder_encounter_monster.xml
+++ b/app/src/main/res/layout/viewholder_encounter_monster.xml
@@ -6,8 +6,8 @@
     android:layout_height="@dimen/three_line_list_item_height"
     android:background="?attr/colorSurface"
 
-    android:elevation="4dp"
     android:clickable="true"
+    android:elevation="4dp"
     android:focusable="true">
 
     <ImageView
@@ -51,41 +51,44 @@
         app:layout_constraintTop_toBottomOf="@id/list_item_caption"
         tools:text="Aasimar" />
 
-    <TextView
+    <ImageView
         android:id="@+id/monster_count_decrement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:foreground="?selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:background="?selectableItemBackground"
-        android:text="-" />
+        android:padding="8dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_remove_circle_outline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/monster_count_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/monster_count_decrement"
+        app:layout_constraintEnd_toEndOf="@id/monster_count_decrement"
+        app:layout_constraintStart_toStartOf="@id/monster_count_increment"
         app:layout_constraintTop_toTopOf="parent"
+        android:padding="4dp"
+        style="@style/TextAppearance.MaterialComponents.Subtitle1"
         tools:text="1" />
 
-    <TextView
+    <ImageView
         android:id="@+id/monster_count_increment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/monster_count_textView"
-        app:layout_constraintTop_toTopOf="parent"
+        android:foreground="?selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:background="?selectableItemBackground"
-        android:text="+" />
+        android:padding="8dp"
+        android:src="@drawable/ic_add_circle_outline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/monster_count_textView"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
