--- a/app/src/main/res/layout/viewholder_saved_encounter.xml
+++ b/app/src/main/res/layout/viewholder_saved_encounter.xml
@@ -38,7 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Export"
+        android:text="@string/export"
+        app:icon="@drawable/ic_print"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
