--- a/app/src/main/res/layout/fragment_encounter_export.xml
+++ b/app/src/main/res/layout/fragment_encounter_export.xml
@@ -11,7 +11,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/export_button"
+        android:id="@+id/print_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
