--- a/app/src/main/res/layout/fragment_encounters.xml
+++ b/app/src/main/res/layout/fragment_encounters.xml
@@ -63,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        style="@style/Widget.MaterialComponents.Button.Icon"
         android:text="@string/create_encounter"
         app:icon="@drawable/ic_create"
         android:enabled="false"
@@ -83,7 +84,6 @@
         android:id="@+id/encounter_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
