--- a/app/src/main/res/layout/viewholder_saved_encounter.xml
+++ b/app/src/main/res/layout/viewholder_saved_encounter.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/two_line_list_item_height"
+    android:layout_height="@dimen/three_line_list_item_height"
     android:background="?attr/colorSurface"
     android:clickable="true"
     android:elevation="4dp"
-    android:focusable="true">
+    android:focusable="true"
+    android:foreground="?selectableItemBackground">
 
 
     <TextView
@@ -17,6 +18,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/list_item_margin"
         android:layout_marginTop="@dimen/list_item_margin"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:lines="1"
+        app:layout_constraintEnd_toStartOf="@id/more_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Some Encounter" />
@@ -27,19 +32,38 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_item_caption_gap"
-        app:layout_constraintEnd_toStartOf="@id/export_button"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:lines="1"
+        app:layout_constraintEnd_toStartOf="@id/more_button"
         app:layout_constraintStart_toStartOf="@id/list_item_title"
         app:layout_constraintTop_toBottomOf="@id/list_item_title"
+        tools:text="Some text aboud the encounter" />
+
+    <TextView
+        android:id="@+id/list_item_monsters"
+        style="@style/TextAppearance.MaterialComponents.Caption"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/list_item_caption_gap"
+        android:layout_marginEnd="8dp"
         android:ellipsize="end"
+        android:lines="1"
+        app:layout_constraintEnd_toStartOf="@id/more_button"
+        app:layout_constraintStart_toStartOf="@id/list_item_title"
+        app:layout_constraintTop_toBottomOf="@id/list_item_caption"
         tools:text="With these monsters" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/export_button"
+    <ImageView
+        android:id="@+id/more_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/export"
-        app:icon="@drawable/ic_print"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?selectableItemBackground"
+        android:padding="16dp"
+        android:src="@drawable/ic_more_vert"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
